--- a/redux-02/src/index.css
+++ b/redux-02/src/index.css
@@ -4,39 +4,66 @@
   box-sizing: border-box;
 }
 
+html {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  background: #333;
+  color: whitesmoke;
+}
+
 body {
   min-height: 100vh;
-  font-size: 5rem;
-  display: grid;
-  place-content: center;
+  font-size: 1.5rem;
+  padding: 0 10% 10%;
 }
 
 input,
-button {
+textarea,
+button,
+select {
   font: inherit;
-  padding: 0.5rem;
+  margin-bottom: 1em;
+}
+
+main {
+  max-width: 500px;
+  margin: auto;
 }
 
 section {
+  margin-top: 1em;
+}
+
+article {
+  margin: 0.5em 0.5em 0.5em 0;
+  border: 1px solid whitesmoke;
+  border-radius: 10px;
+  padding: 1em;
+}
+
+h1 {
+  font-size: 3.5rem;
+}
+
+p {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
+  font-size: 1.2rem;
+  margin: 0.5em 0;
+}
+
+form {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
-input {
-  text-align: center;
-  max-width: 2.5em;
+.postCredit {
+  font-size: 1rem;
 }
 
-/* button css */
-
-button {
-  font-size: 2rem;
-  margin: 0.5em 0 0.5em 0.5em;
-  min-width: 2em;
-}
-
-button:first-child {
-  margin-left: 0;
+.reactionButton {
+  margin: 0 0.25em 0 0;
+  background: transparent;
+  border: none;
+  color: whitesmoke;
+  font-size: 1rem;
 }
